--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <h4>hello</h4>
         <div class="container">
             <h1>People entered:</h1>
             <h2 id="count-el">0</h2>
